<resources>
    <string name="app_name" translatable="false">Mitch</string>
    <string name="notification_channel_updates">Game updates</string>
    <string name="notification_channel_install">App install</string>
    <string name="notification_channel_install_desc">Notify when an itch.io app requires installation.</string>
    <string name="notification_channel_updates_desc">Notify when an itch.io game receives an update.</string>
    <string name="notification_install_title">Click to install</string>
    <string name="notification_download_complete_title">Download complete</string>
    <string name="nav_website_view">Browse</string>
    <string name="nav_installed">My Library</string>
    <string name="nav_settings">Settings</string>
    <string name="settings_block_trackers">Block trackers</string>
    <string name="settings_block_trackers_desc">Prevents access to Google Analytics.\nNote that some game developers might actually rely on those statistics.</string>
    <string name="settings_category_browse">Browsing</string>
    <string name="settings_category_updater">Installation and Updates</string>
    <string name="settings_update_check_mode">Update check mode</string>
    <string name="settings_update_check_metered">Check updates when on metered connections</string>
    <string name="settings_update_check_metered_desc">If this option is disabled, Mitch will not check for updates on connections with data limits.</string>
    <string name="settings_category_ui">Appearance</string>
    <string name="notification_channel_installing">Download or installation process</string>
    <string name="notification_channel_installing_desc">Show the current status of games during download or installation.</string>
    <string name="notification_installing">Installing app</string>
    <string name="notification_install_complete_title">App installed</string>
    <string name="notification_install_cancelled_title">Installation cancelled</string>
    <string name="notification_install_unknown_title">Unknown error</string>
    <string name="notification_install_blocked_title">Installation blocked</string>
    <string name="notification_install_conflict_title">App conflicts with another package</string>
    <string name="notification_install_incompatible_title">App is incompatible with your device</string>
    <string name="notification_install_invalid_title">Invalid file</string>
    <string name="notification_install_storage_title">Installation failed: storage issues</string>
    <string name="library_category_installed">Installed apps</string>
    <string name="library_category_downloads">Downloads</string>
    <string name="library_category_web_cached">Web games</string>
    <string name="game_go_to_store">Show store page</string>
    <string name="game_package_info">Show app info</string>
    <string name="game_download_remove">Remove from app</string>
    <string name="game_download_delete">Delete</string>
    <string name="game_package_info_fail">Your system cannot show app info.</string>
    <string name="dialog_game_delete">Are you sure you want to delete the file %1$s?</string>
    <string name="dialog_game_remove">The file %1$s will stay in your Downloads folder.</string>
    <string name="dialog_remove">Remove</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_yes">Yes</string>
    <string name="popup_game_removed">%1$s has been removed from Mitch.</string>
    <string name="notification_update_up_to_date">Up to date</string>
    <string name="notification_update_available">Update available</string>
    <string name="notification_update_unknown">Unable to process updates</string>
    <string name="notification_update_access_denied">Access denied (are you logged in to your account?)</string>
    <string name="notification_update_empty">Downloads no longer available</string>
    <string name="notification_update_fail">An error occurred while checking updates</string>
    <string name="browser_reload">Reload page</string>
    <string name="browser_search">Website search</string>
    <string name="browser_share">Share link</string>
    <string name="search_games_hint">Search for games or creators</string>
    <string name="popup_download_started">Download started</string>
    <string name="menu_game_collection">Add to collection</string>
    <string name="menu_game_devlog">Devlog</string>
    <string name="menu_game_rate">Rate or Review</string>
    <string name="menu_game_related">More games like this</string>
    <string name="browser_open_in_browser">Open in browser</string>
    <string name="menu_game_gamejam">%1$s entry</string>
    <string name="menu_game_author">More from %1$s</string>
    <string name="menu_game_author_generic">More from this creator</string>
    <string name="menu_game_subscribe">Subscribe to updates</string>
    <string name="popup_subscribe_game_not_owned">Cannot subscribe to a product that we haven\'t purchased.</string>
    <string name="popup_subscribe_game_all_subscribed">You have already subscribed to all available files.</string>
    <string name="dialog_subscribe_title">Subscription</string>
    <string name="dialog_subscribe_message">You will receive a notification when one of these files gets updated.</string>
    <string name="dialog_subscribe_yes">Subscribe</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_theme_dark">Dark</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_theme_system">Depends on system</string>
    <string name="settings_theme_site">Depends on site</string>
    <string name="settings_start_page">Starting Page</string>
    <string name="settings_start_page_android">Popular Android games</string>
    <string name="settings_start_page_library">Owned games library (requires login)</string>
    <string name="settings_start_page_itch">itch.io Main page</string>
    <string name="settings_start_page_all_games">Popular games</string>
    <string name="settings_start_page_web">Popular games for the web</string>
    <string name="settings_start_page_web_touch">Popular games for the web, with touchscreen support</string>
    <string name="settings_start_page_feed">News feed (requires login)</string>
    <string name="library_category_pending">In progress</string>
    <string name="library_item_downloading">Downloading…</string>
    <string name="library_item_installing">Installing…</string>
    <string name="library_item_ready_to_install">Press to install</string>
    <string name="game_cancel_download_or_install">Cancel</string>
    <string name="popup_download_or_install_cancelled">Cancelled</string>
    <string name="notification_game_running">itch.io web game is running</string>
    <string name="notification_channel_web_running">Web game is running</string>
    <string name="notification_channel_web_running_desc">Notify when a game is running inside the app\'s web browser.</string>
    <string name="notification_download_error">Error while downloading: %1$s</string>
    <string name="select_app_for_file">Open this file using</string>
    <string name="popup_game_deleted">%1$s has been deleted.</string>
    <string name="dialog_cancel_download_done">Cancelled download.</string>
    <string name="dialog_game_delete_title">Delete this file?</string>
    <string name="dialog_game_remove_title">Stop receiving updates?</string>
    <string name="dialog_app_delete_title">Delete this app?</string>
    <string name="dialog_app_delete">Are you sure you want to delete %1$s?</string>
    <string name="notification_download_time_remaining">Remaining: %1$d min %2$d sec</string>
    <string name="game_move_to_downloads">Move to Downloads folder</string>
    <string name="dialog_missing_file_title">File not found</string>
    <string name="dialog_missing_file">The file %1$s was either moved or deleted from the Downloads folder.\n\nWould you like to remove it from the Mitch app? You will no longer receive updates for %2$s.</string>
    <string name="popup_moved_to_downloads">Moved file %1$s to Downloads folder.</string>
    <string name="popup_moving_to_downloads">Moving file to Download folder…</string>
    <string name="popup_move_to_download_error">Error while moving to Download folder</string>
    <string name="updates_all_up_to_date">Everything up to date</string>
    <string name="updates_last_check_time">Last checked %s</string>
    <string name="updates_pull_to_refresh">Pull down to refresh</string>
    <string name="nav_updates">Updates</string>
    <string name="updates_error">Error while checking updates</string>
    <plurals name="updates_available">
        <item quantity="one">%d update available!</item>
        <item quantity="other">%d updates available!</item>
    </plurals>
    <string name="updates_do_update">Update</string>
    <string name="updates_size_and_name">%1$s · %2$s</string>
    <string name="updates_version_change">%1$s → %2$s</string>
    <string name="updates_multiple">Multiple versions available</string>
    <string name="library_no_apps">No apps installed.</string>
    <string name="library_no_downloads">Nothing downloaded.</string>
    <string name="dialog_dont_show_again">Don\'t show this again</string>
    <string name="dialog_dont_ask_again">Don\'t ask this again</string>
    <string name="dialog_web_prompt">Web page at %s asks:</string>
    <string name="dialog_web_alert">Web page at %s says:</string>
    <string name="library_category_owned">Owned items</string>
    <string name="library_category_owned_see">View →</string>
    <string name="platform_android">Android</string>
    <string name="library_install">Install</string>
    <string name="library_download">Download</string>
    <string name="network_request_retry">Retry</string>
    <string name="library_not_logged_in">You must log in to your itch.io account in order to access owned items.</string>
    <string name="log_in">Log in</string>
    <string name="library_options_show_only_android">Only Android</string>
    <string name="library_no_games">It looks like you don\'t own any itch.io games.</string>
    <string name="library_no_android_games">It looks like you don\'t own any Android games.</string>
    <string name="library_go_to_store">Go to store</string>
    <string name="bug_report_dialog">Sorry, it looks like there was an error in Mitch. Press OK to send a bug report to the developer.</string>
    <string name="bug_report_dialog_title">Something went wrong</string>
    <string name="library_games_search">Search</string>
    <string name="library_open_app_failed">This application could not be opened.</string>
    <string name="settings_category_advanced">Advanced</string>
    <string name="settings_cancel_downloads">Reset all downloads</string>
    <string name="settings_cancel_downloads_title">Reset all current downloads?</string>
    <string name="settings_cancel_downloads_message">This should only be done for testing or troubleshooting purposes.</string>
    <string name="dialog_no">No</string>
    <string name="settings_installer_desc">Try changing this if you have trouble installing apps.</string>
    <string name="settings_installer">Installation method</string>
    <string name="settings_installer_session">Session installer (default)</string>
    <string name="settings_installer_native">Native installer (needed for some MIUI devices)</string>
    <string name="popup_handler_app_not_found">Don\'t know how to open %s</string>
    <string name="game_bundle_claim">Claim</string>
    <string name="game_buy">Purchase</string>
    <string name="game_download">Download</string>
    <string name="game_install">Install</string>
    <string name="game_price">%s or more</string>
    <string name="game_web_install_launcher_shortcut">Install on home screen</string>
</resources>