<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/settings_category_browse">
        <SwitchPreference
                android:defaultValue="@string/preference_value_block_trackers"
                android:key="preference_block_trackers"
                android:summary="@string/settings_block_trackers_desc"
                android:title="@string/settings_block_trackers" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_category_updater">
        <SwitchPreference
                android:defaultValue="true"
                android:key="preference_update_check_if_metered"
                android:summary="@string/settings_update_check_metered_desc"
                android:title="@string/settings_update_check_metered" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_category_ui">
        <ListPreference
                android:defaultValue="site"
                android:entries="@array/pref_theme_entries"
                android:entryValues="@array/pref_theme_values"
                android:key="preference_theme"
                android:title="@string/settings_theme" />
    </PreferenceCategory>
</PreferenceScreen>