<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/go_to_store"
            android:icon="@drawable/ic_baseline_web_24"
            android:title="@string/game_go_to_store" />
    <item
            android:id="@+id/app_info"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/game_package_info" />
    <item
            android:id="@+id/move_to_downloads"
            android:icon="@drawable/ic_baseline_folder_24"
            android:title="@string/game_move_to_downloads" />
    <item
            android:id="@+id/web_install_launcher_shortcut"
            android:icon="@drawable/ic_baseline_add_to_home_screen_24"
            android:title="@string/game_web_install_launcher_shortcut" />
    <item
            android:id="@+id/delete"
            android:icon="@drawable/ic_baseline_delete_24"
            android:title="@string/game_download_delete" />
    <item
            android:id="@+id/remove"
            android:icon="@drawable/ic_baseline_remove_circle_outline_24"
            android:title="@string/game_download_remove" />
    <item
            android:id="@+id/cancel"
            android:icon="@drawable/ic_baseline_cancel_24"
            android:title="@string/game_cancel_download_or_install" />
</menu>