<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/navigation_website_view"
            android:title="@string/nav_website_view"
            android:icon="@drawable/ic_shop_black_24dp"
            android:orderInCategory="0"/>
    <item
            android:title="@string/nav_installed"
            android:id="@+id/navigation_library"
            android:icon="@drawable/ic_storage_black_24dp"
            android:orderInCategory="1"/>
    <item
            android:title="@string/nav_updates"
            android:id="@+id/navigation_updates"
            android:icon="@drawable/ic_baseline_notifications_24"
            android:orderInCategory="2"/>
    <item
            android:title="@string/nav_settings"
            android:id="@+id/navigation_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:orderInCategory="3"/>
</menu>
