<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:id="@+id/libraryLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="10dp">

        <TextView
                android:id="@+id/pending_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:paddingTop="20dp"
                android:text="@string/library_category_pending"
                android:textColor="?colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/pending_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:scrollbarAlwaysDrawHorizontalTrack="true"
                android:visibility="gone"
                tools:itemCount="1"
                tools:listitem="@layout/library_item" />

        <TextView
                android:id="@+id/installed_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:paddingTop="20dp"
                android:text="@string/library_category_installed"
                android:textColor="?colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/installed_nothing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="0dp"
                android:text="@string/library_no_apps"
                android:visibility="gone"
                tools:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/installed_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbarAlwaysDrawHorizontalTrack="true"
                tools:itemCount="1"
                tools:listitem="@layout/library_item"
                tools:visibility="gone" />

        <TextView
                android:id="@+id/downloads_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:paddingTop="20dp"
                android:text="@string/library_category_downloads"
                android:textColor="?colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/downloads_nothing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="0dp"
                android:text="@string/library_no_downloads"
                android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/downloads_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbarAlwaysDrawHorizontalTrack="true"
                tools:itemCount="1"
                tools:listitem="@layout/library_item" />
    </LinearLayout>

</ScrollView>